--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ h1{
 .logo img{
      border-radius: 50%;
      align-items: center;
-     margin-left: 40%;
+     margin-left: 38%;
 
      
 }
@@ -65,7 +65,7 @@ h3{
 
 .image{
     width: 100%;
-    height: 600px;
+    height: 450px;
 }
 .image img{
     width:100%;
@@ -131,7 +131,43 @@ button{
     border-radius: 10px;
 }
 
+/* Responsive text */
+h1, h2, h3, p {
+  margin-bottom: 10px;
+}
 
+/* --- Responsive Breakpoints --- */
+@media (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .headings, .description, .forms {
+    text-align: center;
+  }
+
+  .cards img {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2 {
+    font-size: 1.2rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  button {
+    width: 100%;
+  }
+}
 
 
